<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/bookTitleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_book_title"
        android:layout_margin="20dp"
        android:layout_marginTop="5dp"
        app:boxStrokeWidth="5dp"
        app:hintEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/bookTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
         />

    </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border"
                tools:ignore="UselessParent">


            <Spinner
                    android:id="@+id/conSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overlapAnchor="false"
                    android:spinnerMode="dropdown"
                    />

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/title_margin"
                android:layout_marginTop="-5dp"
                android:paddingLeft="@dimen/title_padding"
                android:paddingRight="@dimen/title_padding"
                android:text="@string/hint_cond"
                android:background="@color/white"
                android:textColor="@color/darkGrey"
                />

        </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/locationLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/hint_location"
        app:boxStrokeWidth="5dp"
        app:hintEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/locText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            />

    </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <android.support.design.button.MaterialButton
                android:id="@+id/datePickerButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/set_date_text"
                android:textSize="16sp"
                app:cornerRadius="30dp"
                android:layout_marginTop="10dp"
                />

    <RelativeLayout
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/border"
            tools:ignore="UselessParent">

            <Spinner
                android:id="@+id/timeSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overlapAnchor="false"
                android:spinnerMode="dropdown"
                />

                </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:layout_marginStart="2dp"
            android:paddingLeft="@dimen/title_padding"
            android:paddingRight="@dimen/title_padding"
            android:text="@string/preferred_string"
            android:background="@color/white"
            android:textColor="@color/darkGrey"
            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
       >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/border"
            tools:ignore="UselessParent">

            <Spinner
                android:id="@+id/ampmSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overlapAnchor="false"
                android:spinnerMode="dropdown"
               />
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="-5dp"
                    android:paddingLeft="@dimen/title_padding"
                    android:paddingRight="@dimen/title_padding"
                    android:text="@string/timing_string"
                    android:background="@color/white"
                    android:textColor="@color/darkGrey"
                    />
            </RelativeLayout>
        </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/priceLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_price"
        android:layout_margin="20dp"
        app:boxStrokeWidth="5dp"
        app:hintEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/priceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            />

    </android.support.design.widget.TextInputLayout>

        <android.support.design.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/upload_pic_text"
            android:layout_gravity="center"
            android:textSize="16sp"
            app:cornerRadius="30dp"/>

        <android.support.design.button.MaterialButton
            android:id="@+id/listButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_listing_text"
            android:textSize="16sp"
            app:cornerRadius="30dp"
            />


    </LinearLayout>
