...
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="todo">TODO</string>

    <string name="hint_user">Username</string>
    <string name="hint_pass">Password</string>
    <string name="hint_email">E-mail</string>
...
    <string name="hint_book_title">Book Title</string>
    <string name="hint_cond">Condition</string>
    <string name="hint_location">Preferred Meeting Location</string>
    <string name="hint_price">Price</string>
    <string name="preferred_string">Preferred</string>
    <string name="timing_string">Timing</string>
    <string name="set_date_text">Set Date</string>
    <string name="upload_pic_text">Upload Picture</string>
    <string name="add_listing_text">Add Listing</string>

    <string name="my_books">My Listed Books</string>
    <string name="change_particulars">Update User Details</string>
    <string name="change_avatar_text">Change Avatar</string>
...

    <string name="list_it">List It!</string>
    <string name="take_it">Take It!</string>

    <string name="search_hint">Search books</string>

    <string name="logout_text">Logout</string>

    <string-array name="ampmarray">
        <item>AM</item>
        <item>PM</item>
    </string-array>

...
